--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
         <meta name="robots" content="index,follow">
         <meta http-equiv="X-UA-Compatible" conetnt="IE=edge">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 640px)">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">        
         <title>YardSale</title>
     </head>
     <body>
-        
+        <section class="login">
+            <section class="form-container">
+                <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+                <h1 class="title">Create a new password</h1>
+                <p class="subtitle">Enter a new password for your account</p>
+                <form action="/" class="form">
+                    <label for="psswd" class="label">Password</label>
+                    <input class="input input-password" type="password" id="psswd" placeholder="*********">
+
+                    <label for="re-psswd" class="label">Re-enter password</label>
+                    <input class="input input-password" type="password" id="re-psswd" placeholder="*********">
+                    
+                    <input class="primary-button login-button" type="submit" value="Confirm">
+                </form>
+            </section>
+        </section>
     </body>
 </html>
