--- a/html/create_password.html
+++ b/html/create_password.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="robots" content="index,follow">
         <meta http-equiv="X-UA-Compatible" conetnt="IE=edge">
-        <link rel="stylesheet" href="./styles.css">
-        <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 640px)">
+        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="../styles/desktop.css" media="screen and (min-width: 640px)">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">        
@@ -15,7 +15,7 @@
     <body>
         <section class="login">
             <section class="form-container">
-                <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+                <img src="../logos/logo_yard_sale.svg" alt="logo" class="logo">
                 <h1 class="title">Create a new password</h1>
                 <p class="subtitle">Enter a new password for your account</p>
                 <form action="/" class="form">
