modifique el archivo de create_account porque tenia un typo en una clase y modifique sus estilos, ya que no esyaban bien, añadí archivo de my_account.html

--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
                 <a href="/" class="forgot">Forgot my password</a>
             </form>
 
-            <button class="secondary-button signup-buttom">Sign Up</button>
+            <button class="secondary-button signup-button">Sign Up</button>
         </section>
     </section>
 </body>
