--- a/html/my_order.html
+++ b/html/my_order.html
@@ -34,6 +34,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
 
             <div class="cart-item">
@@ -42,6 +43,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
 
             <div class="cart-item">
@@ -50,6 +52,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
 
             <div class="cart-item">
@@ -58,6 +61,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
             
             <div class="cart-item">
@@ -66,6 +70,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
 
             <div class="cart-item">
@@ -74,6 +79,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
 
             <div class="cart-item">
@@ -82,6 +88,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
 
             <div class="cart-item">
@@ -90,6 +97,7 @@
                 </figure>
                 <p>Mini Fridge</p>
                 <p>$120,00</p>
+                <span></span>
             </div>
         </div>
 
