realice el navbar para versión mobile y desktop, listo para prueba en gitpages

--- a/html/home.html
+++ b/html/home.html
@@ -13,6 +13,51 @@
     <title>YardSale Login</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+                <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu">
+            <div class="navbar-left">
+                <img src="../logos/logo_yard_sale.svg" alt="logo yardsale" class="navbar-logo">
+                <ul id="menu-icon">
+                    <li>
+                        <a href="/">All</a>
+                    </li>
+                    <li>
+                        <a href="/">Clothes</a>
+                    </li>
+                    <li>
+                        <a href="/">Electronics</a>
+                    </li>
+                    <li>
+                        <a href="/">Furniture</a>
+                    </li>
+                    <li>
+                        <a href="/">Toys</a>
+                    </li>
+                    <li>
+                        <a href="/">Other</a>
+                    </li>
+                    <li>
+                        <a href="./home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./my_account.html">My Account</a>
+                    </li>
+                </ul>
+            </div>
+    
+            <div class="navbar-right">
+                <ul>
+                    <li class="navbar-email">example@email.com</li>
+                    <li class="navbar-shopping-cart">
+                        <img src="../icons/icon_shopping_cart.svg" alt="shopping cart">
+                        <div class="cart-items">2</div>
+                    </li>
+    
+                </ul>
+            </div>
+        </nav>
+    </header>
     <section class="main-container">
         <article class="cards-container">
             <div class="card">
