--- a/html/my_account.html
+++ b/html/my_account.html
@@ -13,7 +13,52 @@
     <title>My Account</title>
 </head>
 <body>
-    <section class="login">
+    <header>
+        <nav class="navbar">
+                <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu">
+            <div class="navbar-left">
+                <img src="../logos/logo_yard_sale.svg" alt="logo yardsale" class="navbar-logo">
+                <ul id="menu-icon">
+                    <li>
+                        <a href="/">All</a>
+                    </li>
+                    <li>
+                        <a href="/">Clothes</a>
+                    </li>
+                    <li>
+                        <a href="/">Electronics</a>
+                    </li>
+                    <li>
+                        <a href="/">Furniture</a>
+                    </li>
+                    <li>
+                        <a href="/">Toys</a>
+                    </li>
+                    <li>
+                        <a href="/">Other</a>
+                    </li>
+                    <li>
+                        <a href="./home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="./my_account.html">My Account</a>
+                    </li>
+                </ul>
+            </div>
+    
+            <div class="navbar-right">
+                <ul>
+                    <li class="navbar-email">example@email.com</li>
+                    <li class="navbar-shopping-cart">
+                        <img src="../icons/icon_shopping_cart.svg" alt="shopping cart">
+                        <div class="cart-items">2</div>
+                    </li>
+    
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section class="login account">
         <section class="form-container account-container">
             <h1 class="title account">My account</h1>
             <form action="/" class="form account-form">
