--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
                 <label for="psswd" class="label">Password</label>
                 <input class="input input-password" type="password" id="psswd" placeholder="*********">
                 
-                <button class="primary-button login-button"><a href="./home.html">Log In</a></button>
+                <button class="primary-button login-button"><a href=html/home.html">Log In</a></button>
                 <!-- <input class="primary-button login-button" type="button" value="Log In"> -->
                 <a href="/" class="forgot">Forgot my password</a>
             </form>
