cambios a direcciones en gitpages

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" conetnt="IE=edge">
     <meta name="robots" content="index,follow">
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/desktop.css" media="screen and (min-width: 640px)">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 640px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">        
@@ -15,7 +15,7 @@
 <body>
     <section class="login">
         <section class="form-container">
-            <img src="../logos/logo_yard_sale.svg" alt="logo" class="logo">
+            <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
             <form action="/" class="form">
                 <label for="email" class="label">Email address</label>
                 <input class="input input-email" type="text" id="email" placeholder="example@email.com" autocomplete="email">
@@ -23,7 +23,7 @@
                 <label for="psswd" class="label">Password</label>
                 <input class="input input-password" type="password" id="psswd" placeholder="*********">
                 
-                <button class="primary-button login-button"><a href="/home.html">Log In</a></button>
+                <button class="primary-button login-button"><a href="./html/home.html">Log In</a></button>
                 <!-- <input class="primary-button login-button" type="button" value="Log In"> -->
                 <a href="/" class="forgot">Forgot my password</a>
             </form>
