--- a/html/home.html
+++ b/html/home.html
@@ -10,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">        
+    <script defer src="../js/toggle.js"></script>
     <title>YardSale Login</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-                <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu">
+            <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu" id="toggle">
             <div class="navbar-left">
                 <img src="../logos/logo_yard_sale.svg" alt="logo yardsale" class="navbar-logo">
                 <ul id="menu-icon">
@@ -41,7 +42,7 @@
                         <a href="./home.html">Home</a>
                     </li>
                     <li>
-                        <a href="./my_account.html">My Account</a>
+                        <a href="./my_account.html">Account</a>
                     </li>
                 </ul>
             </div>
@@ -57,6 +58,51 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="mobile-menu" id="mobile-menu">
+            <ul class="categories-menu">
+                <li>
+                    <a href="/">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="/">All</a>
+                </li>
+                <li>
+                    <a href="/">Clothes</a>
+                </li>
+                <li>
+                    <a href="/">Electronics</a>
+                </li>
+                <li>
+                    <a href="/">Furniture</a>
+                </li>
+                <li>
+                    <a href="/">Toys</a>
+                </li>
+                <li>
+                    <a href="/">Other</a>
+                </li>
+            </ul>
+    
+            <ul class="personal-menu">
+                <li>
+                    <a href="/">My orders</a>
+                </li>
+                <li>
+                    <a href="/html/my_account.html">My account</a>
+                </li>
+            </ul>
+    
+            <ul class="signout-menu">
+                <li>
+                    <a class="email" href="/">example@email.com</a>
+                </li>
+                <li>
+                    <a class="sign-out" href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
+
     </header>
     <section class="main-container">
         <article class="cards-container">
