--- a/html/my_account.html
+++ b/html/my_account.html
@@ -41,7 +41,7 @@
                         <a href="./home.html">Home</a>
                     </li>
                     <li>
-                        <a href="./my_account.html">My Account</a>
+                        <a href="./my_account.html">Account</a>
                     </li>
                 </ul>
             </div>
