realice cambios de los menus de navegación

--- a/html/home.html
+++ b/html/home.html
@@ -17,11 +17,11 @@
     <header>
         <nav class="navbar">
             <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu" id="toggle">
-            <div class="navbar-left">
+            <div class="navbar-left" id="navbar">
                 <img src="../logos/logo_yard_sale.svg" alt="logo yardsale" class="navbar-logo">
                 <ul id="menu-icon">
                     <li>
-                        <a href="/">All</a>
+                        <a href="/html/home.html">All</a>
                     </li>
                     <li>
                         <a href="/">Clothes</a>
@@ -39,10 +39,10 @@
                         <a href="/">Other</a>
                     </li>
                     <li>
-                        <a href="./home.html">Home</a>
+                        <a href="/html/my_order.html">Orders</a>
                     </li>
                     <li>
-                        <a href="./my_account.html">Account</a>
+                        <a href="/html/my_account.html">Account</a>
                     </li>
                 </ul>
             </div>
@@ -62,10 +62,10 @@
         <div class="mobile-menu" id="mobile-menu">
             <ul class="categories-menu">
                 <li>
-                    <a href="/">CATEGORIES</a>
+                    CATEGORIES
                 </li>
                 <li>
-                    <a href="/">All</a>
+                    <a href="/html/home.html">All</a>
                 </li>
                 <li>
                     <a href="/">Clothes</a>
@@ -86,7 +86,7 @@
     
             <ul class="personal-menu">
                 <li>
-                    <a href="/">My orders</a>
+                    <a href="/html/my_order.html">My orders</a>
                 </li>
                 <li>
                     <a href="/html/my_account.html">My account</a>
@@ -104,6 +104,7 @@
         </div>
 
     </header>
+    <main id="main">
     <section class="main-container">
         <article class="cards-container">
             <div class="card">
@@ -359,5 +360,6 @@
         </article>
 
     </section>
+    </main>
 </body>
 </html>
