--- a/html/my_account.html
+++ b/html/my_account.html
@@ -10,17 +10,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">        
+    <script defer src="../js/toggle.js"></script>
     <title>My Account</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
-                <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu">
-            <div class="navbar-left">
+            <img src="../icons/icon_menu.svg" alt="icon_menu" class="menu" id="toggle">
+            <div class="navbar-left" id="navbar">
                 <img src="../logos/logo_yard_sale.svg" alt="logo yardsale" class="navbar-logo">
                 <ul id="menu-icon">
                     <li>
-                        <a href="/">All</a>
+                        <a href="/html/home.html">All</a>
                     </li>
                     <li>
                         <a href="/">Clothes</a>
@@ -38,10 +39,10 @@
                         <a href="/">Other</a>
                     </li>
                     <li>
-                        <a href="./home.html">Home</a>
+                        <a href="/html/my_order.html">Orders</a>
                     </li>
                     <li>
-                        <a href="./my_account.html">Account</a>
+                        <a href="/html/my_account.html">Account</a>
                     </li>
                 </ul>
             </div>
@@ -57,7 +58,53 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="mobile-menu" id="mobile-menu">
+            <ul class="categories-menu">
+                <li>
+                    CATEGORIES
+                </li>
+                <li>
+                    <a href="/html/home.html">All</a>
+                </li>
+                <li>
+                    <a href="/">Clothes</a>
+                </li>
+                <li>
+                    <a href="/">Electronics</a>
+                </li>
+                <li>
+                    <a href="/">Furniture</a>
+                </li>
+                <li>
+                    <a href="/">Toys</a>
+                </li>
+                <li>
+                    <a href="/">Other</a>
+                </li>
+            </ul>
+    
+            <ul class="personal-menu">
+                <li>
+                    <a href="/html/my_order.html">My orders</a>
+                </li>
+                <li>
+                    <a href="/html/my_account.html">My account</a>
+                </li>
+            </ul>
+    
+            <ul class="signout-menu">
+                <li>
+                    <a class="email" href="/">example@email.com</a>
+                </li>
+                <li>
+                    <a class="sign-out" href="/">Sign out</a>
+                </li>
+            </ul>
+        </div>
+
     </header>
+    <main id="main">
     <section class="login account">
         <section class="form-container account-container">
             <h1 class="title account">My account</h1>
@@ -81,5 +128,6 @@
             </form>
         </section>
     </section>
+    </main>
 </body>
 </html>
