--- a/html/my_account.html
+++ b/html/my_account.html
@@ -21,7 +21,7 @@
                 <img src="../logos/logo_yard_sale.svg" alt="logo yardsale" class="navbar-logo">
                 <ul id="menu-icon">
                     <li>
-                        <a href="/html/home.html">All</a>
+                        <a href="/practica/html/home.html">All</a>
                     </li>
                     <li>
                         <a href="/">Clothes</a>
@@ -39,10 +39,10 @@
                         <a href="/">Other</a>
                     </li>
                     <li>
-                        <a href="/html/my_order.html">Orders</a>
+                        <a href="/practica/html/my_order.html">Orders</a>
                     </li>
                     <li>
-                        <a href="/html/my_account.html">Account</a>
+                        <a href="/practica/html/my_account.html">Account</a>
                     </li>
                 </ul>
             </div>
@@ -65,7 +65,7 @@
                     CATEGORIES
                 </li>
                 <li>
-                    <a href="/html/home.html">All</a>
+                    <a href="/practica/html/home.html">All</a>
                 </li>
                 <li>
                     <a href="/">Clothes</a>
@@ -86,10 +86,10 @@
     
             <ul class="personal-menu">
                 <li>
-                    <a href="/html/my_order.html">My orders</a>
+                    <a href="/practica/html/my_order.html">My orders</a>
                 </li>
                 <li>
-                    <a href="/html/my_account.html">My account</a>
+                    <a href="/practica/html/my_account.html">My account</a>
                 </li>
             </ul>
     
