realice cambios a las rutas de acceso a las paginas para compatiblidad con github pages

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <label for="psswd" class="label">Password</label>
                 <input class="input input-password" type="password" id="psswd" placeholder="*********">
                 
-                <button class="primary-button login-button"><a href="/html/home.html">Log In</a></button>
+                <button class="primary-button login-button"><a href="/practica/html/home.html">Log In</a></button>
                 <!-- <input class="primary-button login-button" type="button" value="Log In"> -->
-                <a href="/" class="forgot">Forgot my password</a>
+                <a href="/practica/html/create_password.html" class="forgot">Forgot my password</a>
             </form>
 
-            <button class="secondary-button signup-button">Sign Up</button>
+            <button class="secondary-button signup-button"><a href="/practica/html/create_account.html">Sign Up</a></button>
         </section>
     </section>
 </body>
