--- a/html/my_order.html
+++ b/html/my_order.html
@@ -24,19 +24,19 @@
                         <a href="/practica/html/home.html">All</a>
                     </li>
                     <li>
-                        <a href="/">Clothes</a>
+                        <a href="/practica/html/home.html">Clothes</a>
                     </li>
                     <li>
-                        <a href="/">Electronics</a>
+                        <a href="//practica/html/home.html">Electronics</a>
                     </li>
                     <li>
-                        <a href="/">Furniture</a>
+                        <a href="/practica/html/home.html">Furniture</a>
                     </li>
                     <li>
-                        <a href="/">Toys</a>
+                        <a href="/practica/html/home.html">Toys</a>
                     </li>
                     <li>
-                        <a href="/">Other</a>
+                        <a href="/practica/html/home.html">Other</a>
                     </li>
                     <li>
                         <a href="/practica/html/my_order.html">Orders</a>
@@ -68,19 +68,19 @@
                     <a href="/practica/html/home.html">All</a>
                 </li>
                 <li>
-                    <a href="/">Clothes</a>
+                    <a href="/practica/html/home.html">Clothes</a>
                 </li>
                 <li>
-                    <a href="/">Electronics</a>
+                    <a href="/practica/html/home.html">Electronics</a>
                 </li>
                 <li>
-                    <a href="/">Furniture</a>
+                    <a href="/practica/html/home.html">Furniture</a>
                 </li>
                 <li>
-                    <a href="/">Toys</a>
+                    <a href="/practica/html/home.html">Toys</a>
                 </li>
                 <li>
-                    <a href="/">Other</a>
+                    <a href="/practica/html/home.html">Other</a>
                 </li>
             </ul>
     
@@ -95,10 +95,10 @@
     
             <ul class="signout-menu">
                 <li>
-                    <a class="email" href="/">example@email.com</a>
+                    <a class="email" href="/practica/">example@email.com</a>
                 </li>
                 <li>
-                    <a class="sign-out" href="/">Sign out</a>
+                    <a class="sign-out" href="/practica/">Sign out</a>
                 </li>
             </ul>
         </div>
